# CodeAgentOrchestrator

./: .dockerignore  .env.example  .gitignore  EMAIL.md  IMPLEMENTATION_PLAN.md  README.md  SETUP.md  SPEC_CHECK.md  config.yaml  docker-compose.yml  pyproject.toml
backend/: Dockerfile  pyproject.toml
backend/user_management/: api.py  auth.py  encryption.py
consumer/: Dockerfile  __main__.py  consumer.py  pyproject.toml  task_processor.py  user_config_client.py
consumer/agents/: __init__.py  configurable_agent.py  guideline_learning_agent.py
consumer/analysis/: __init__.py  environment_analyzer.py
consumer/definitions/: __init__.py  definition_loader.py
consumer/execution/: __init__.py  execution_environment_manager.py
consumer/executors/: __init__.py  base_executor.py  branch_merge_executor.py  content_transfer_executor.py  exec_env_setup_executor.py  plan_env_setup_executor.py  progress_finalize_executor.py  task_context_init_executor.py  user_resolver_executor.py
consumer/factories/: __init__.py  agent_factory.py  executor_factory.py  task_strategy_factory.py  workflow_builder.py  workflow_factory.py
consumer/handlers/: task_handler.py
consumer/mcp/: __init__.py  execution_environment_mcp_wrapper.py  mcp_client.py  mcp_client_factory.py
consumer/middleware/: __init__.py  comment_check_middleware.py  error_handling_middleware.py  i_middleware.py  infinite_loop_detection_middleware.py  metrics_collector.py  token_usage_middleware.py
consumer/planning/: __init__.py  pre_planning_manager.py
consumer/providers/: __init__.py  chat_history_provider.py  context_compression_service.py  context_storage_manager.py  planning_context_provider.py  task_inheritance_context_provider.py  tool_result_context_provider.py
consumer/strategies/: __init__.py  i_task_strategy.py  issue_only_strategy.py  issue_to_mr_conversion_strategy.py  merge_request_strategy.py
consumer/tools/: __init__.py  issue_to_mr_converter.py  mermaid_graph_renderer.py  progress_comment_manager.py  progress_reporter.py  todo_management_tool.py
consumer/utils/: __init__.py  token_utils.py
producer/: Dockerfile  __main__.py  filelock_util.py  gitlab_event_handler.py  producer.py  pyproject.toml  task_getter_from_gitlab.py
shared/: pyproject.toml
shared/config/: config_manager.py  models.py
shared/database/: __init__.py  connection.py  (+1 more)
(+125 files in other folders)
