[project]
name = "automata-backend"
version = "0.1.0"
description = "AutomataCodex User Config API バックエンド"
requires-python = ">=3.11"
dependencies = [
    "automata-shared",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-jose>=3.3",
    "passlib>=1.7",
]

[tool.uv.sources]
automata-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
