[project]
name = "automata-producer"
version = "0.1.0"
description = "AutomataCodex Producer サービス"
requires-python = ">=3.11"
dependencies = [
    "automata-shared",
    "aio-pika>=9.0",
    "python-gitlab>=4.0",
]

[tool.uv.sources]
automata-shared = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
