[project]
name = "automata-shared"
version = "0.1.0"
description = "AutomataCodex 共通ライブラリ"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "asyncpg>=0.29",
    "cryptography>=42.0",
    "python-gitlab>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["config", "models", "gitlab_client", "messaging", "database"]
